MODON MRE BPDEV/force-app/main/default/objects/Verification_Config__mdt/Verification_Config__mdt.object-meta.xml
<CustomObject>
    <label>Verification Config</label>
    <pluralLabel>Verification Configs</pluralLabel>
</CustomObject>