MODON MRE BPDEV/force-app/main/default/objects/Verification_Config__mdt/fields/Max_Resends__c.field-meta.xml
<CustomField>
    <fullName>Max_Resends__c</fullName>
    <label>Max Resends</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>