MODON MRE BPDEV/force-app/main/default/objects/Verification_Config__mdt/fields/Otp_Length__c.field-meta.xml
<CustomField>
    <fullName>Otp_Length__c</fullName>
    <label>OTP Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>