MODON MRE BPDEV/force-app/main/default/objects/Verification_Config__mdt/fields/Resend_Cooldown_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Resend_Cooldown_Seconds__c</fullName>
    <label>Resend Cooldown Seconds</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>