MODON MRE BPDEV/force-app/main/default/objects/Verification_Config__mdt/fields/Sender_Class__c.field-meta.xml
<CustomField>
    <fullName>Sender_Class__c</fullName>
    <label>Sender Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>